Update changelog for release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
 fwupd (1.7.3-1) UNRELEASED; urgency=medium
 
   * New upstream version (1.7.3)
+  * ignore subprojects and build directory from upstream builds in same folder
+  * Update symbols and shared library name
+  * drop lintian overrides for EFI binary, gone from the split
+  * use wildcards in lintian override for library-not-linked-against-libc
+  * drop unused debian/source/include-binaries
+  * Add Rules-Requires-Root clause
+  * Fix man page location
 
- -- Mario Limonciello <superm1@gmail.com>  Tue, 04 Jan 2022 12:51:48 -0600
+ -- Mario Limonciello <superm1@gmail.com>  Tue, 04 Jan 2022 14:24:19 -0600
 
 fwupd (1.7.1-1) unstable; urgency=medium
 
